fetch all hotels from database using query with the possibility of make search with the attributes